demo/laravel/k8s/3.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: laravel-kubernetes
  namespace: crm
spec:
  selector:
    matchLabels:
      run: laravel-kubernetes
  template:
    metadata:
      labels:
        run: laravel-kubernetes
    spec:
      containers:
        - name: demo
          image: hub.example.com/laravel-kubernetes
          ports:
            - containerPort: 80
      imagePullSecrets:
      - name: docker-secret
