demo/laravel/k8s/4.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: laravel-kubernetes
  namespace: crm
spec:
  selector:
    run: laravel-kubernetes
  ports:
    - protocol: TCP
      port: 80
