demo/laravel/k8s/5.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: laravel-kubernetes-ingress
  namespace: crm
spec:
  ingressClassName: nginx
  rules:
  - host: laravel.example.com
    http:
      paths:
      - backend:
          service:
            name: laravel-kubernetes
            port:
              number: 80
        path: /
        pathType: Prefix
